package c2s_user;
syntax = "proto3";

import "./share_structure.proto";

// login
message login {
    required string name = 1;  // name, ommited
    required string uid = 2; // uid from verify result
    required string token = 3; // token from verify result
}

// create player, only 1 plyaer per user
message create_player {
    required string pname = 1;  // player name
    required uint32 gender = 2; // player gender, 0=unknown, 1=male, 2=female
}

// enter game
message enter_game {

}

// move in map, go to position
message goto {
    required share.player_mov_info goto = 1; // goto info
}
// stop in map
message stop {
    required share.pos2d pos = 1; // stop positoin
}

// start change map, when tirgger map transport point
// send this message and start loading new map info
message changemap_begin {
}

// after new map loading finish, send change map end msg
message changemap_end {
    required uint32 tomapid = 1; // target map id
}

// get palyer simple info
// when receive {player_enterzone}, check local player info cache, if player not
// exit, then send this msg to get player simple info for showing player
message get_player_sinfo {
    repeated uint32 playerids = 1; // to get info player id aray
}

// get player info
message get_player_info {
    repeated uint32 playerids = 1; // to get info player id aray
}

// get palyer hero info (self or others)
message get_hero_info {
    required uint32 playerid = 1; // to get info player id

}

// get palyer pet info (self or others)
message get_pet_info {
    required uint32 playerid = 1; // to get info player id
}

// get palyer pet info (self or others)
message get_ship_info {
    required uint32 playerid = 1; // to get info player id
}

// change player avatar info by HeroNFT
message change_avatar {
    required string heronftid = 1; // hero nft id, see in {sc:HeroNFT}
}

// change pet avatar info by HeroNFT
message change_pet {
    required string heronftid = 1; // hero nft id, see in {sc:HeroNFT}
}


// send chat msg
message chat {
    required uint32 channel = 1; // chat channel, 1=wolrd, 2=current map, 3=near by
    required string msg = 2; // chat msg
}

// ----------------------------------------------------------------------------

// get port data
message get_portdata {
    required uint32 portid = 1; // port id
}

// ----------------------------------------------------------------------------

// get mine info
message get_mineinfo {
    repeated uint32 mineids = 1; // mine id, see in mine config
}

// start manul mine
message start_manulmine {
    required uint32 mineid = 1; // mine id, see in mine config
}
// stop manul mine
message stop_manulmine {}
// performe a manul mine output
message manulmine {}
// fetch current manulmine
message fetch_manulmine_output{}

// start hero mine
// need bind hero usage as "mine" first, see in {sc:bindNFTUsage}
message start_heromine {
    required string heronftid = 1; // hero nft id, see in {sc:HeroNFT}
    required uint32 mineid = 2; // mine id, see in mine config
}
// stop hero mine
message stop_heromine {
    required string heronftid = 1; // hero nft id, see in {sc:HeroNFT}
}
// get hero mine infos
message get_heromine_infos {
    required string heronftid = 1; // hero nft id array, see in {sc:HeroNFT}
}
// fetch hero mine outputs
message fetch_heromine_output {
    required string heronftid = 1; // hero nft id, see in {sc:HeroNFT}
}

// ----------------------------------------------------------------------------

// factory make product
message make_factory_product {
    required uint32 proditemid = 1; // product item id, see in item config
    required uint32 count = 2; // item count
    required uint32 lineidx = 3; // line index
}

// set factory hero
message set_factory_hero {
    required string nftid = 1; // hero or pet nft id, see in {sc:HeroNFT}
    required uint32 lineidx = 2; // line index
    required bool ispet = 3; // hero or pet
}

// unset factory hero
message unset_factory_hero {
    required string nftid = 1; // hero or pet nft id, see in {sc:HeroNFT}
    required uint32 lineidx = 2; // line index
}

// fetch factory output product
message fetch_factory_product {
    required uint32 lineidx = 1; // line index
}

// ----------------------------------------------------------------------------

// put on sale
message shop_put_onsale {
    required uint32 proditemid = 1;  // product item id, see in item config
    required uint32 count = 2; // item count
}

// fetch shop gold
message shop_fetch_gold {

}